--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!doctype html>
 <html>
   <head>
-    <title>This is the title of the webpage!</title>
+    <title>STONNE Simulator</title>
   </head>
   <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+    <h1><center>STONNE Simulator</center></h1>
+    <br><br>
+    <h4>STONNE codebase</h4>
+    <br>
+    <h4>ASPLOS 2022 Tutorial</h4>
+    <br>
+    <h4>Resources</h4>
   </body>
 </html>
